# warehouse-replenishment-ai-demo

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  azure.yaml  docker-compose.yml  pyproject.toml  requirements-prod.txt  start.sh  stop.sh
.github/workflows/: ci.yml
copilot-studio/: README.md  solution.yaml
copilot-studio/actions/: call-foundry-multiagent.json  call-foundry-sequential.json
copilot-studio/adaptive-cards/: approval-card.json  rejection-card.json
copilot-studio/topics/: ApproveMinMax.yaml  ExplainRejection.yaml  GetReplenRecommendations.yaml  PlanCrossFacility.yaml
data/: candidates.json  capacity.json  d365_validation_response.json  orders.json  sku_inventory.json  waves.json
docs/: 01-architecture.md  02-user-guide.md  03-data-contracts.md  04-governance.md  05-copilot-studio.md  06-foundry.md  07-demo-options.md  08-copilot-studio-setup.md
docs/diagrams/: replenishment-architecture.drawio
docs/images/: supply-chain-architecture.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
infra/: README.md  main.bicep  main.json  main.parameters.json
infra/bicep/: main.bicep
infra/databricks/: README.md
infra/github-actions/: README.md
notebooks/: 01_min_max_candidates.sql
scripts/: provision_foundry_agents.py
src/app/: Dockerfile  __init__.py  config.py  main.py
src/foundry/: __init__.py  foundry_reasoner.py  narration.py  observability.py
tests/evals/: run_evals.py
(+40 files in other folders)
